--- a/.github/workflows/opensearch.yml
+++ b/.github/workflows/opensearch.yml
@@ -3,6 +3,10 @@ name: opensearch
 jobs:
   opensearch:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        opensearch: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
     services:
       opensearch:
         image: opensearchproject/opensearch:2.13.0
