--- a/.github/workflows/opensearch.yml
+++ b/.github/workflows/opensearch.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        opensearch: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+        opensearch: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
     services:
       opensearch:
         image: opensearchproject/opensearch:2.13.0
